# csce703_project_summer_2026

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
common/: __init__.py  bytes_bits.py
docs/: PLAN.md  PROMPTS.md  final_report_draft.tex  index.html  slh-dsa.html
hardware/: .gitignore  README.md
hardware/docs/: PLAN.md
hardware/rtl/keccak/: keccak_f1600.sv  keccak_pkg.sv  keccak_round.sv  keccak_sponge.sv  shake_xof.sv
hardware/sim/: Makefile
hardware/sim/filelists/: rtl.f  tb.f
hardware/tb/keccak/: keccak_agent.svh  keccak_driver.svh  keccak_env.svh  keccak_if.sv  keccak_monitor.svh  keccak_scoreboard.svh  keccak_seq_item.svh  keccak_sequence.svh  keccak_test.svh  keccak_uvm_pkg.sv
hardware/tb/smoke/: README.md  gen_smoke.py  tb_smoke.sv
hardware/tb/top/: tb_keccak.sv
hardware/tb/vectors/: README.md  (+1 more)
mldsa/: __init__.py  conversions.py  encoding.py  hashes.py  mldsa.py  ntt.py  params.py  rounding.py  sampling.py
mldsa/tests/: test_conversions.py  test_encoding.py  test_hashes.py  test_mldsa_api.py  test_mldsa_kat.py  test_mldsa_properties.py  test_ntt.py  test_rounding.py  test_sampling.py
mlkem/: __init__.py  bytes_bits.py  hashes.py  kpke.py  mlkem.py  ntt.py  params.py  sampling.py  serialize.py
mlkem/tests/: test_bytes_bits.py  test_hashes.py  test_kpke.py  test_mlkem_kat.py  test_mlkem_properties.py  test_ntt.py  test_sampling.py  test_serialize.py
slhdsa/: __init__.py  address.py  fors.py  hashes.py  ht.py  params.py  slhdsa.py  wots.py  xmss.py
slhdsa/tests/: test_address.py  test_fors.py  test_hashes.py  test_params.py  test_slhdsa_api.py  test_slhdsa_kat.py  test_slhdsa_properties.py  test_wots.py  test_xmss.py
visualization/: index.html  mldsa.html  mlkem.html  slh-dsa.html
(+45 files in other folders)
